Closed Bug 229405 Opened 21 years ago Closed 21 years ago

Bookmarks toolbar menu fonts too small

Categories

(Camino Graveyard :: Toolbars & Menus, defect)

PowerPC
macOS
defect
Not set
minor

Tracking

(Not tracked)

VERIFIED FIXED
Camino0.8

People

(Reporter: mozilla, Assigned: mikepinkerton)

Details

User-Agent:       Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.7a) Gecko/20031221 Camino/0.7+
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.7a) Gecko/20031221 Camino/0.7+

The font for bookmarks in the bookmarks toolbar is small, which is okay, but the
menus you can open with folders on the bookmarks toolbar is too small compared
to normal menus.  It would be best to make the font size of those menu items the
same as application menus for exampl.e

Reproducible: Always

Steps to Reproduce:
1. Add a bookmark folder to the bookmarks toolbar
2. Add at least one item to the sub folder.
3. click the popdown menu 
Actual Results:  
font size in the menu is the same size as the toolbar

Expected Results:  
the font size should be larger, and more readable.
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Target Milestone: --- → Camino0.8
fixed.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Yep, Verified fixed in the 2004010603 NB under 10.3.2
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.