make the bookmark toolbar folder popup menu use the normal font size (bug 229405)